namespace ObserverPattern.BaseCode;

public class ConcreteObserver : Observer
{
    public void Update(ISubject subject)
    {
        throw new NotImplementedException();
    }
}