namespace ObserverPattern.BaseCode;

public interface ISubject
{
    
}