namespace ObserverPattern.BaseCode;

public interface Observer
{
    public void Update(ISubject subject);
}



